--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1,4 +1,4 @@
-/* "Clarity" by Valerio Lyndon / Revision 20.4 */
+/* "Clarity" by Valerio Lyndon / Revision 21.0 */
 
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 
@@ -29,6 +29,9 @@ a, a:hover {
 .status-menu-container:not(.fixed) .status-menu,
 .status-menu-container.fixed .status-menu,
 .status-button:after,
+#search-box,
+#search-box input,
+#search-box:after,
 .list-table-header .header-title,
 .list-table .list-table-header .header-title .link.sort,
 .data.image .link:after,
@@ -43,13 +46,14 @@ a, a:hover {
 .data.tags a.edit:after,
 .list-item .data.tags a.edit,
 .data.priority,
-#advanced-options #fancybox-close,
-#advanced-options .advanced-options-button a
+#advanced-options .advanced-options-button a,
+#fancybox-close
 {
 	-webkit-transition: all 0.3s ease !important;
 	transition: all 0.3s ease !important;
 }
 
+#search-button i,
 .header-info a,
 .data.title .link.sort,
 .data.progress span .link,
@@ -58,7 +62,12 @@ a[class^="icon-add-"],
 .data.volume span .link,
 .add-edit-more span a,
 .data.season a,
-.more-info .td1 > div > a
+.more-info .td1 > div > a,
+#advanced-options .advanced-options-header .description,
+#advanced-options .advanced-options-header .description:before,
+#advanced-options [class*="-widget"] input,
+#advanced-options [class*="-widget"] select,
+#advanced-options [class*="-widget"] label
 {
 	-webkit-transition: all 0.15s ease !important;
 	transition: all 0.15s ease !important;
@@ -634,7 +643,7 @@ a[class^="icon-add-"],
 	
 	color: #9B9B9B !important;
 	font-size: 17.6px !important;
-	line-height: 32px;
+	line-height: 30px;
 	white-space: nowrap;
 	font-family: Oswald !important;
 	text-transform: uppercase;
@@ -645,16 +654,79 @@ a[class^="icon-add-"],
 }
 
 .status-menu-container .search-container {
-	top: 21px;
+	top: 19px;
 	right: 0;
 }
-#search-box { margin-top: 0 !important; }
-#search-button {
+
+#search-box {
+	padding-right: 22px;
+	border: 2px solid transparent;
+	border-radius: 13px;
 	margin-top: 0 !important;
+}
+#search-box.open {
+	width: 150px !important;
+	background: #ebebeb;
+	border: 2px solid #ddd;
+}
+#search-box input {
+	background: none;
+	border: none;
+	border-radius: 13px;
+	outline: none;
+}
+#search-box.open input {
+	text-indent: 7.5px;
+	line-height: 20px;
+}
+
+#search-box:after {
+	content: "";
+	position: absolute;
+	right: 0;
+	top: 0;
+	
+	width: 0;
+	height: 22px;
+	padding-right: 22px;
+	background: -webkit-linear-gradient(to right, #ebebeb 2px, rgba(235, 235, 235, 0) 9.5px, rgba(235, 235, 235, 0) 142.5px, #ebebeb 150px) content-box;
+	background: linear-gradient(to right, #ebebeb 2px, rgba(235, 235, 235, 0) 9.5px, rgba(235, 235, 235, 0) 142.5px, #ebebeb 150px) content-box;
+	border: 2px solid transparent;
+	border-radius: 13px;
+	
+	pointer-events: none;
+	opacity: 0;
+}
+#search-box.open:after {
+	width: 150px;
+	opacity: 1;
+}
+
+.status-menu-container .search-container #search-button {
+	position: absolute;
+	right: 0;
+	top: 0;
+	
+	width: 26px;
+	height: 26px;
+	border-radius: 13px;
+	margin-top: 0;
+	
+	text-align: center;
+}
+.open ~ #search-button {
+	pointer-events: none;
 }
 #search-button i {
 	color: #9b9b9b !important;
-	line-height: 22px;
+	font-size: 18px;
+	line-height: 26px;
+	
+	transition: all 0.15s ease;
+}
+.open ~ #search-button i {
+	font-size: 14px;
+	line-height: 24px;
 }
 
 .status-button.all_anime:after { background: #4065BA !important; }
@@ -1002,7 +1074,7 @@ a[class^="icon-add-"],
 	order: 11;
 	
 	text-align: left !important;
-	color: #BABABA;
+	color: #bababa;
 	line-height: 16px;
 	font-size: 10px;
 }
@@ -1052,9 +1124,9 @@ a[class^="icon-add-"],
 .content-status:after, .rewatching:after, .rereading:after { content: "] - " }
 
 .add-edit-more { display: inline; float: none !important; }
-.add-edit-more { color: #BABABA; }
+.add-edit-more { color: #bababa; }
 .data.title .add-edit-more span a {
-	color: #BABABA !important;
+	color: #bababa !important;
 }
 .data.title .add-edit-more span a:hover {
 	color: #646464 !important;
@@ -1134,7 +1206,7 @@ a[class^="icon-add-"],
 	color: #bababa;
 }
 
-.data.progress span:only-child:after, .data.chapter span:only-child:after, .data.volume span:only-child:after {
+.data.progress span:only-of-type:after, .data.chapter span:only-of-type:after, .data.volume span:only-of-type:after {
 	content: " \f058";
 	position: relative;
     top: 1px;
@@ -1410,14 +1482,306 @@ a[class^="icon-add-"],
 	color: #323232;
 }
 
-/* FILTER BOX OVERLAY */
+/* FILTER BOX OVERLAY - GENERAL */
 
 #advanced-options {
-	border: none;
+	top: 64px;
+	
+	width: 910px;
+	padding: 32px 0;
 	background: #fff;
+	border: none;
+	
+	box-shadow: 0 0 32px rgba(0,0,0,0.5);
+	
+	color: #111;
 }
 
+#advanced-options .advanced-options-header,
+#advanced-options .advanced-options-button,
+#advanced-options [class*="-widget"]
+{
+	width: 550px;
+	padding: 0;
+	border: none;
+}
+
+#advanced-options .sort-widget:last-of-type,
+#advanced-options .filter-widget:last-of-type {
+	padding-bottom: 0;
+}
+#advanced-options .sort, #advanced-options .filter {
+	padding-bottom: 32px;
+}
+
+/* FILTER BOX OVERLAY - HEADERS */
+
+#advanced-options .advanced-options-header {
+	font-size: 0;
+	line-height: 26px;
+	
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+#advanced-options .advanced-options-header:before {
+	display: inline-block;
+	width: 69px;
+	height: 100%;
+	padding-bottom: 7.5px;
+	
+	font-size: 16px;
+	line-height: 26px;
+	text-align: right;
+}
+#advanced-options .filter .advanced-options-header:before {
+	content: "Filter";
+}
+#advanced-options .sort .advanced-options-header:before {
+	content: "Sort";
+}
+
+#advanced-options .advanced-options-header .description {
+	display: inline-block;
+	width: 20px;
+	margin: 0;
+	
+	color: transparent;
+	white-space: nowrap;
+	vertical-align: top;
+	
+	transition: all 0.15s ease;
+	pointer-events: none;
+}
+#advanced-options .advanced-options-header .description:hover {
+	color: inherit;
+	
+	pointer-events: auto;
+}
+#advanced-options .advanced-options-header .description:before {
+	content: "\f059";
+	
+	display: inline-block;
+	width: 20.5px;
+	
+	color: #323232;
+	font: 14px/1 FontAwesome;
+	text-align: center;
+	
+	pointer-events: auto;
+}
+#advanced-options .advanced-options-header .description:hover:before {
+	color: #bababa;
+}
+
+/* FILTER BOX OVERLAY - ITEMS */
+
+#advanced-options [class*="-widget"] span {
+	line-height: 26px;
+}
+#advanced-options [class*="-widget"] span:not(.widget-header),
+#advanced-options [class*="-widget"] input,
+#advanced-options [class*="-widget"] select,
+#advanced-options [class*="-widget"] label
+{
+	height: 26px;
+	margin: 11px 0;
+	border-color: #bababa !important;
+	border-radius: 13px;
+	
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	
+	color: #111;
+	font-size: 12px;
+}
+#advanced-options [class*="-widget"] input,
+#advanced-options [class*="-widget"] select {
+	padding: 0 7.5px;
+	background: transparent;
+	outline: none;
+}
+#advanced-options [class*="-widget"] select {
+	padding-right: 16px;
+	background: transparent url(https://i.imgur.com/hFijppc.png) no-repeat center right / 16px auto;
+}
+#advanced-options [class*="-widget"] input:focus,
+#advanced-options [class*="-widget"] select:focus {
+	background-color: #ebebeb !important;
+}
+#advanced-options input:disabled + label,
+#advanced-options :disabled
+{
+	opacity: 0.5;
+	color: #323232 !important;
+}
+
+#advanced-options [class*="-widget"] {
+	font-size: 0;
+	line-height: 1;
+	white-space: nowrap;
+}
+#advanced-options [class*="-widget"] > * {
+	font-size: 12px;
+	vertical-align: top;
+}
+
+#advanced-options [class*="-widget"] .widget-header {
+	width: 70.5px;
+	height: 26px;
+	padding: 11px 7.5px 11px 0;
+	border-right: 2px solid #bababa;
+	margin-right: 7.5px;
+	
+	line-height: 26px;
+	text-align: right;
+}
+
+/* FILTER BOX OVERLAY - SPECIFIC ITEMS */
+
+#advanced-options .title input {
+	width: 387.5px !important;
+}
+
+#advanced-options .airing-status select {
+	width: 197.5px !important;
+}
+
+#advanced-options .producer select {
+	width: 387.5px !important;
+}
+
+#advanced-options .aired-date span:nth-of-type(n+2) {
+	display: inline-block;
+	width: 40px;
+	padding: 0 3px 0 7.5px;
+	border: #bababa 1px solid;
+	border-right: none;
+	border-radius: 13px 0 0 13px;
+	margin-right: 0 !important;
+	
+	line-height: 24px;
+	font-style: italic;
+}
+#advanced-options .aired-date span:nth-of-type(3) {
+	margin-left: 7.5px !important;
+}
+#advanced-options .aired-date .year,
+#advanced-options .aired-date .month,
+#advanced-options .aired-date .day {
+	border-radius: 0;
+	padding: 0 16px 0 7.5px;
+	border-left-width: 0;
+}
+#advanced-options .aired-date .year,
+#advanced-options .aired-date .month {
+	border-right: none;
+}
+#advanced-options .aired-date .day {
+	border-radius: 0 13px 13px 0;
+}
+#advanced-options .aired-date .year { width: 60px !important; }
+#advanced-options .aired-date .month,
+#advanced-options .aired-date .day { width: 45px !important; }
+
+#advanced-options .aired-season .year {
+	width: 60px !important;
+}
+#advanced-options .aired-season .season {
+	width: 130px !important;
+	margin-left: 7.5px;
+}
+
+#advanced-options .first select,
+#advanced-options .second select {
+	width: 190px !important;	
+}
+#advanced-options .sort-widget input[type=radio] + label {
+	width: 92.25px !important;
+	border-radius: 13px;
+	margin-left: 7.5px;
+	background: transparent !important;
+	
+	color: #111;
+	line-height: 14px;
+	
+	transition: all 0.15s ease;
+}
+#advanced-options .sort-widget input[type=radio]:not(:disabled) + label:hover {
+	background: #ebebeb !important;
+}
+#advanced-options .sort-widget input[type=radio]:not(:disabled):checked + label {
+	background: #bababa !important;
+	border: #bababa 1px solid;
+}
+#advanced-options .sort-widget input[type=radio]:not(:checked) + label i {
+	color: #323232;
+}
+
+/* FILTER BOX OVERLAY - BUTTONS */
+
+#advanced-options .advanced-options-button a,
 #advanced-options #fancybox-close {
+	width: 90px;
+	height: 26px;
+	padding: 0;
+	background: #ebebeb;
+	border-radius: 13px;
+	box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+	
+	color: #111;
+	line-height: 26px;
+	text-align: center;
+}
+#advanced-options .advanced-options-button a:hover,
+#advanced-options #fancybox-close:hover {
+	background: #323232;
+	
+	color: #fff;
+}
+#advanced-options .advanced-options-button .btn-apply {
+	margin: 0 0 0 -106px;
+}
+#advanced-options .advanced-options-button .btn-clear {
+	margin: 0 0 0 8px;
+}
+#advanced-options #fancybox-close {
+	left: 50%;
+	top: auto;
+	bottom: 32px;
+	
+	border: none;
+	margin-left: 53px;
+}
+
+#advanced-options .btn-apply:before {
+	content: "\f00c  ";
+	font-family: FontAwesome;
+}
+#advanced-options .btn-clear:before {
+	content: "\f12d  ";
+	font-family: FontAwesome;
+}
+#advanced-options #fancybox-close:after {
+	content: "\f00d  Close";
+	font: 12px/26px Arial, FontAwesome, sans-serif;
+}
+
+/* FANCYBOX */
+
+#fancybox-overlay {
+	background: #000 !important;
+	
+	opacity: 0.2 !important;
+}
+
+#fancybox-outer [class^="fancy-"] {
+	display: none;
+}
+#fancybox-outer {
+	box-shadow: 0 0 32px rgba(0,0,0,0.5);
+}
+
+#fancybox-outer #fancybox-close {
     top: -13px;
 	right: -13px;
 	
@@ -1433,52 +1797,18 @@ a[class^="icon-add-"],
 	
 	box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
 }
-#advanced-options #fancybox-close:after {	
+#fancybox-outer #fancybox-close:after {	
 	content: "\f00d";
 	
 	display: block;
 	margin-top: -1px;
 	
-	font: 16px FontAwesome;
+	font: 16px/1 FontAwesome;
 }
-#advanced-options #fancybox-close:hover {
+#fancybox-outer #fancybox-close:hover {
 	background: #323232;
 	
 	color: #fff;
-}
-
-#advanced-options .advanced-options-header {
-	border-color: #323232;
-	
-	color: #111;
-}
-#advanced-options .advanced-options-button { border-color: #323232; }
-
-#advanced-options .filter-widget span, #advanced-options .sort-widget span { color: #111; }
-
-#advanced-options .sort-widget input[type=radio]:checked + label {
-    background-color: #4065BA;
-    border: #4065BA 1px solid;
-}
-
-#advanced-options .advanced-options-button a {
-	height: 14px;
-	background: #ebebeb;
-	border-radius: 13px;
-	box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
-	
-	color: #111;
-}
-#advanced-options .advanced-options-button a:hover {
-	background: #323232;
-	
-	color: #fff;
-}
-
-#fancybox-overlay {
-	background: #000 !important;
-	
-	opacity: 0.1 !important;
 }
 
 /* FOOTER */
