--- a/Clarity Theme/Mod - Dark Mode.css
+++ b/Clarity Theme/Mod - Dark Mode.css
@@ -1,4 +1,4 @@
-/* "Clarity" Modification by Valerio Lyndon / Dark Mode / Revision 1.0 */
+/* "Clarity" Modification by Valerio Lyndon / Dark Mode / Revision 1.1 */
 
 body { background: #161616 none no-repeat center / cover fixed !important; }
 
@@ -16,9 +16,10 @@ a, a:hover {
 .list-table > tbody:first-of-type:after,
 .status-menu:after,
 /* Filter Box */
-#fancybox-close,
+#advanced-options #fancybox-close,
+#fancybox-outer #fancybox-close,
 #advanced-options .advanced-options-button a
-{ box-shadow: 0px 1px 2px rgba(0,0,0,0.8) !important; }
+{ box-shadow: 0px 1px 2px rgba(0,0,0,0.8); }
 
 /* CONTENT BACKGROUND */
 /* Nav Buttons */
@@ -29,6 +30,7 @@ a, a:hover {
 .stats a,
 .list-table > tbody:first-of-type:after,
 /* General */
+.list-table[data-items="[]"]:after,
 .data.number,
 .list-block:before,
 .list-item,
@@ -54,6 +56,7 @@ a, a:hover {
 .stats a,
 .list-table > tbody:first-of-type:after,
 /* General */
+.list-table[data-items="[]"]:after,
 .status-menu .status-button.on,
 .list-stats,
 .list-table .list-table-data .data a,
@@ -222,11 +225,11 @@ a, a:hover {
 }
 
 .cover-block:before {
-	background: -webkit-linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0));
+	background: -webkit-linear-gradient(bottom,rgba(0,0,0,0.8),rgba(0,0,0,0));
 	background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0));
 }
 .list-block:after {
-	background: -webkit-linear-gradient(to bottom,rgba(0,0,0,0.8),rgba(0,0,0,0));
+	background: -webkit-linear-gradient(top,rgba(0,0,0,0.8),rgba(0,0,0,0));
 	background: linear-gradient(to bottom,rgba(0,0,0,0.8),rgba(0,0,0,0));
 }
 .status-menu:after {
@@ -247,7 +250,7 @@ a, a:hover {
 	border-color: #444;
 }
 #search-box:after {
-	background-image: -webkit-linear-gradient(to right, #191919 2px, rgba(25, 25, 25, 0) 9.5px, rgba(25, 25, 25, 0) 142.5px, #191919 150px);
+	background-image: -webkit-linear-gradient(left, #191919 2px, rgba(25, 25, 25, 0) 9.5px, rgba(25, 25, 25, 0) 142.5px, #191919 150px);
 	background-image: linear-gradient(to right, #191919 2px, rgba(25, 25, 25, 0) 9.5px, rgba(25, 25, 25, 0) 142.5px, #191919 150px);
 }
 
