--- a/9anime Theme/Theme.css
+++ b/9anime Theme/Theme.css
@@ -16,10 +16,9 @@ html, body {
 body {
 	position: relative;
 	
+	background: #16151c center center / cover;
 	background-color: #16151c !important;
 	background-attachment: fixed !important;
-	background-size: cover;
-	background-position: center center;
 	min-width: 1160px;
 	min-height: 100%;
 	padding-bottom: 127.281px;
