--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1867,3 +1867,78 @@ footer {
 	content: "\aList design by Valerio Lyndon.";
 	white-space: pre;
 }
+
+/* Temporary MAL Shutdown Fix */
+.initialize-tutorial {
+	position: fixed;
+	top: 0;
+	left: 0;
+	
+	display: block;
+	width: 40px;
+	height: 40px;
+	padding: 0;
+	background: none;
+	border: none;
+	
+	z-index: 9999;
+	pointer-events: none;
+}
+.initialize-tutorial:hover {
+	pointer-events: auto;
+}
+.initialize-tutorial:before {
+	content: "";
+	position: absolute;
+	top: -40px;
+	left: -45px;
+	
+	display: block;
+	width: 90px;
+	height: 80px;
+	background: #fff;
+	border-bottom: 2px solid #4065BA;
+	
+	pointer-events: auto;
+	transform: rotate(-45deg);
+}
+.initialize-tutorial:hover:before {
+	display: none;
+}
+.initialize-tutorial:after {
+	content: "\f129";
+	position: absolute;
+	top: 0;
+	left: 0;
+	
+	width: 30px;
+	height: 30px;
+	
+	color: #111;
+	font: 20px/30px FontAwesome;
+	
+	z-index: 1;
+}
+.initialize-tutorial .initialize-tutorial__message {
+	position: relative;
+	
+	width: 450px;
+	height: 30px;
+	padding: 10px 10px 10px 30px;
+	background: #fff;
+	border-bottom: 2px solid #4065BA;
+	border-right: 2px solid #4065BA;
+	
+	color: #111;
+	line-height: 15px;
+	text-align: left;
+	
+	opacity: 0;
+	z-index: 1;
+}
+.initialize-tutorial:hover .initialize-tutorial__message {
+	opacity: 1;
+}
+.initialize-tutorial .initialize-tutorial__message a {
+	color: #111;
+}
