--- a/9anime Theme/Theme.css
+++ b/9anime Theme/Theme.css
@@ -1487,7 +1487,7 @@ footer {
 }
 
 /* Temporary MAL Shutdown Fix */
-.initialize-tutorial {
+body .initialize-tutorial {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -1502,7 +1502,7 @@ footer {
 	z-index: 9999;
 	pointer-events: none;
 }
-.initialize-tutorial:hover {
+body .initialize-tutorial:hover {
 	pointer-events: auto;
 }
 .initialize-tutorial:before {
