--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1869,7 +1869,7 @@ footer {
 }
 
 /* Temporary MAL Shutdown Fix */
-.initialize-tutorial {
+body .initialize-tutorial {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -1884,7 +1884,7 @@ footer {
 	z-index: 9999;
 	pointer-events: none;
 }
-.initialize-tutorial:hover {
+body .initialize-tutorial:hover {
 	pointer-events: auto;
 }
 .initialize-tutorial:before {
