--- a/9anime Theme/Theme.css
+++ b/9anime Theme/Theme.css
@@ -1496,8 +1496,8 @@ body .initialize-tutorial {
 	width: 40px;
 	height: 40px;
 	padding: 0;
-	background: none;
-	border: none;
+	background: none !important;
+	border: none !important;
 	
 	z-index: 9999;
 	pointer-events: none;
