--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1,13 +1,6 @@
-/* "Clarity" by Valerio Lyndon / Revision 21.1 + MAL Shutdown Fixes 4 */
+/* "Clarity" by Valerio Lyndon / Revision 21.1 + MAL Shutdown Fixes 5 */
 
-@import url('https://fonts.googleapis.com/css?family=Oswald');
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752GT8G.woff2) format('woff2');
-  unicode-range: U+0020-007F;
-}
+@\import "https://fonts.googleapis.com/css?family=Oswald";
 
 html {
 	position: relative;
@@ -1947,5 +1940,5 @@ body .initialize-tutorial:hover {
 	opacity: 1;
 }
 .initialize-tutorial .initialize-tutorial__message a {
-	color: #111;
+	color: #111 !important;
 }
