--- a/Clarity Theme/Mod - Hover Image.css
+++ b/Clarity Theme/Mod - Hover Image.css
@@ -1,54 +1,52 @@
 /* "Clarity" Modification by Valerio Lyndon / Hover Image / Revision 0.1 */
 
-/* Temporary MAL Shutdown Fix */
+/* Before Code:
+@import url(https://malcat-gen.appspot.com/series?preset=dataimagelinkbefore);
+*/
 
-/* Base */
+/* After Code: */
 .data.image {
 	overflow: visible;
-	border-radius: 0;
 }
-.data.image .link {
-	height: 64px;
-}
-.data.image .link:after {
-	transition-property: opacity, top !important;
-	border-radius: 50%;
-}
-.list-item:hover .data.image .link:after {
-	opacity: 1;
-}
-
-.data.image img {
-	border-radius: 50%;
-	margin-top: 0;
-}
-@keyframes img-in {
-	0% {
-		height: 0;
-	}
-	100% {
-		height: 200px;
-	}
-}
-.list-item:hover img {
+.data.image a:before {
+	content: "";
 	position: absolute;
 	top: 50%;
 	left: -166px;
 	
-	width: 150px !important;
-	height: 200px !important;
-	margin: 0;
-	margin-top: -100px;
+	width: 150px;
+	height: 0;
+/* 	Aspect Ratio: 3:4 OR 75:106 */
+	margin-top: 0;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 	border-radius: 8px;
 	box-shadow: 0 0 2px #000;
 	
+	opacity: 0;
+	pointer-events: none;
+	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+	z-index: 50;
+}
+.list-item:hover .data.image a:before {
+	height: 200px;
+	margin-top: -100px;
+	
+	opacity: 1;
+}
+
+.data.image a:after {
+	border-radius: 50%;
+}
+.data.image img {
+	height: 64px !important;
+	margin: 0;
+	border-radius: 50%;
+	
+	overflow: hidden;
 	object-fit: cover;
-	object-position: center;
 	
 	transform: none;
-	z-index: 50;
-	opacity: 1;
-	pointer-events: none;
-	animation: img-in 0.3s ease;
-	transition: height, margin 0.3s ease;
 }
