Updated image cover generators.
Already updated forum posts, forgot to update these.

--- a/9anime Theme/Theme.css
+++ b/9anime Theme/Theme.css
@@ -1,7 +1,7 @@
 /* "9anime Adaption" by Valerio Lyndon / Revision 0.4 + MAL Shutdown Fixes 5 */
 
 @\import "https://fonts.googleapis.com/css?family=Roboto:400,500,700";
-@\import "https://malcat-gen.appspot.com/series?preset=dataimagelink";
+@\import "https://malscraper.azurewebsites.net/covers/auto/presets/dataimagelink";
 
 /* BASE */
 
