--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1,4 +1,4 @@
-/* "Clarity" by Valerio Lyndon / Revision 21.1 + MAL Shutdown Fixes 5 */
+/* "Clarity" by Valerio Lyndon / Revision 21.1 + MAL Shutdown Fixes 6 */
 
 @\import "https://fonts.googleapis.com/css?family=Oswald";
 
@@ -1868,7 +1868,14 @@ footer {
 	white-space: pre;
 }
 
-/* Temporary MAL Shutdown Fix */
+
+
+
+
+/*==============================*\
+  !MAL-SHUTDOWN-FIXES
+\*==============================*/
+
 body .initialize-tutorial {
 	position: fixed;
 	top: 0;
@@ -1887,6 +1894,7 @@ body .initialize-tutorial {
 body .initialize-tutorial:hover {
 	pointer-events: auto;
 }
+
 .initialize-tutorial:before {
 	content: "";
 	position: absolute;
@@ -1895,16 +1903,15 @@ body .initialize-tutorial:hover {
 	
 	display: block;
 	width: 90px;
-	height: 80px;
+	height: 74px;
 	background: #fff;
 	border-bottom: 2px solid #4065BA;
 	
 	pointer-events: auto;
 	transform: rotate(-45deg);
+	z-index: -1;
 }
-.initialize-tutorial:hover:before {
-	display: none;
-}
+
 .initialize-tutorial:after {
 	content: "\f129";
 	position: absolute;
@@ -1917,10 +1924,15 @@ body .initialize-tutorial:hover {
 	color: #111;
 	font: 20px/30px FontAwesome;
 	
+	transition: all 0.3s ease;
 	z-index: 1;
 }
+
+.initialize-tutorial:hover:after { top: 10px; }
+
 .initialize-tutorial .initialize-tutorial__message {
 	position: relative;
+	left: -450px;
 	
 	width: 450px;
 	height: 30px;
@@ -1934,11 +1946,16 @@ body .initialize-tutorial:hover {
 	text-align: left;
 	
 	opacity: 0;
+	transition: all 0.3s ease;
 	z-index: 1;
 }
+
 .initialize-tutorial:hover .initialize-tutorial__message {
+	left: 0;
+	
 	opacity: 1;
 }
-.initialize-tutorial .initialize-tutorial__message a {
-	color: #111 !important;
-}
+
+.initialize-tutorial .initialize-tutorial__message a { color: #111 !important; }
+
+.initialize-tutorial .initialize-tutorial__message .fa { display: none; }
