--- a/Tilt Theme/Theme.css
+++ b/Tilt Theme/Theme.css
@@ -1,4 +1,4 @@
-/* "Tilt" Theme by Valerio Lyndon / Revision 6.1 + MAL Shutdown Fixes 5 */
+/* "Tilt" Theme by Valerio Lyndon / Revision 6.1 + MAL Shutdown Fixes 6 */
 
 @\import "https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Open+Sans:400,700";
 
@@ -1403,7 +1403,14 @@ body[data-query*="\"status\":6"] .image-container { background-image: url(http:/
 	}
 }
 
-/* Temporary MAL Shutdown Fix */
+
+
+
+
+/*==============================*\
+  !MAL-SHUTDOWN-FIXES
+\*==============================*/
+
 body .initialize-tutorial {
 	position: fixed;
 	top: 0;
@@ -1422,6 +1429,7 @@ body .initialize-tutorial {
 body .initialize-tutorial:hover {
 	pointer-events: auto;
 }
+
 .initialize-tutorial:before {
 	content: "";
 	position: absolute;
@@ -1430,16 +1438,15 @@ body .initialize-tutorial:hover {
 	
 	display: block;
 	width: 90px;
-	height: 80px;
+	height: 74px;
 	background: #000d07;
 	border-bottom: 2px solid #d60025;
 	
 	pointer-events: auto;
 	transform: rotate(-45deg);
+	z-index: -1;
 }
-.initialize-tutorial:hover:before {
-	display: none;
-}
+
 .initialize-tutorial:after {
 	content: "\f129";
 	position: absolute;
@@ -1452,10 +1459,15 @@ body .initialize-tutorial:hover {
 	color: #0cd693;
 	font: 20px/30px FontAwesome;
 	
+	transition: all 0.3s ease;
 	z-index: 1;
 }
+
+.initialize-tutorial:hover:after { top: 10px; }
+
 .initialize-tutorial .initialize-tutorial__message {
 	position: relative;
+	left: -450px;
 	
 	width: 450px;
 	height: 30px;
@@ -1469,14 +1481,17 @@ body .initialize-tutorial:hover {
 	text-align: left;
 	
 	opacity: 0;
+	transition: all 0.3s ease;
 	z-index: 1;
 }
+
 .initialize-tutorial:hover .initialize-tutorial__message {
+	left: 0;
+	
 	opacity: 1;
 }
-.initialize-tutorial .initialize-tutorial__message a {
-	color: #0cd693 !important;
-}
-.initialize-tutorial .initialize-tutorial__message a:hover {
-	text-decoration: underline !important;
-}
+
+.initialize-tutorial .initialize-tutorial__message a { color: #0cd693 !important; }
+.initialize-tutorial .initialize-tutorial__message a:hover { text-decoration: underline !important; }
+
+.initialize-tutorial .initialize-tutorial__message .fa { display: none; }
